--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -14,9 +14,32 @@
 
     /* navigation bar */
     nav.navbar{
-        display: flex;
-        border: 2px dashed;
         font-family: Arial, Helvetica, sans-serif;
+        margin: 10px;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+        
+        
+        
+
+
+    }
+
+    nav .menu{
+        font-size: 1.5rem;
+    }
+
+    nav .logo{
+        align-self: flex-end;
+        justify-self: flex-end;
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+        justify-content: center;
+        
     }
     /* navigation bar end*/
 
@@ -65,6 +88,8 @@
     }
     .ProfileSocialMedia span{
         margin: 4px;
+        font-size: 1.2rem;
+        
     }
 
 
