mobile UI improviment

--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -1,239 +1,8 @@
-
-
-
+@import url("./layout.css");
 @media only screen and (min-width : 320px) {
-    
-    .profileWrapper>*{
-        color: rgb(255, 255, 255);
-        font-family: Arial, Helvetica, sans-serif;
-
-    }
-    .profileWrapper{
-        background-color:rgb(68, 155, 195);
-        background-image: url("../images/bgCoding.gif");
-        background-repeat:no-repeat;
-        background-position: center;
-        background-clip: content-box;
-    }
-
-    /* navigation bar */
-    nav.navbar{
-        font-family: Arial, Helvetica, sans-serif;
-        margin: 10px;
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        justify-content: center;
-        align-content: center;
-        align-items: center;
-        
-        
-        
-        
-
-
-    }
-
-    nav .menu{
-        font-size: 1.5rem;
-    }
-
-    nav .logo{
-        align-self: center;
-        justify-self: flex-end;
-        display: flex;
-        flex-direction: column;
-        align-content: center;
-        justify-content: center;
-       
-
-    }
-    /* navigation bar end*/
-
-    /*profile wrapper*/
-
-    .profileWrapper{
-        /* border: 2px dashed;  */
-        display: grid;
-        grid-template-columns: 1fr;
-        justify-content: center;
-        align-items: center;
-        justify-items: center;
-        align-content: center;
-    }
-
-    .profileImage img{
-        width: 40%;
-        border-radius: 50%;
-        margin: 25px;
-    }
-    .profileImage{
-        align-self: center;
-        justify-self: center;
-        display: flex;
-        flex-direction: column;
-        align-content: center;
-        align-items: center;
-        
-    }
-
-    /* profileDetails */
-    .profileName{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-
-    }
-
-    /* ProfileSocialMedia icons */
-    .ProfileSocialMedia{
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        
-
-    }
-    .ProfileSocialMedia span{
-        margin: 5px;
-        font-size: 1.2rem;
-        
-    }
-
-    /* profileDescription */
-    .profileDescription p{
-        font-size: 0.9rem;
-        text-align: center;
-        margin: 20px;
-        margin-top: 5px;
-        margin-bottom: 50px;
-        
-
-    }
-
-    /*profile wrapper end*/
-
-
-    /* wrapper */
-
-    .wrapper{
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-gap: 5px;
-        padding: 5px;
-    }
-    
-    
-    .callWrapper{
-        
-        display: grid;
-        grid-template-columns: 1fr;
-        background-color: rgb(21, 22, 22);
-        color: white;
-        padding: 10px;
-        border-radius: 5px;
-        position: relative;
-        bottom: 30px;
-        margin-bottom: 0px;
-        height: 100%;
-        
-        
-        
-        
-    }
-    
-    .callWrapper img{
-    
-        width: 100%;
-        padding: 0px;
-        margin: 0px;
-    
-    }
-    
-    .callWrapper .text{
-        display: grid;
-        grid-template-columns: 2fr 1fr;
-        align-items: center;
-        justify-content: center;
-        align-content: center;
-        justify-items: center;
-        
-    
-    }
-    
-    .callWrapper .text p{
-        font-size: 0.9rem;
-        font-weight: bold;
-        
-    
-    }
-    
-    .callWrapper .text h4{
-        border-radius: 5px;
-        font-size: 0.8rem;
-        color: rgb(6, 251, 100);
-        border: 2px solid;
-        width: 60%;
-        text-align: center;
-        padding: 5px;
-        
-    
-    }
-
-    .aboutMe{
-        background-color: rgb(21, 22, 22);
-        color: white;
-        
-        
-        
-        
-        
-    }
-    .aboutMe h4{
-        font-size: 0.9rem;
-        color: rgb(6, 87, 141);
-        padding: 5px;
-
-    }
-
-    .aboutMe p{
-        padding: 5px;
-        padding-bottom: 10px;
-        font-family: Arial, Helvetica, sans-serif;
-        font-size: 0.9rem;
-
-
-    }
-
-    .cvWrapper{
-        background-color: rgb(1, 62, 112);
-        display: flex;
-        justify-content: center;
-        padding: 7px;
-        border-radius: 0px 0px 5px 5px;
-        
-        
-    }
-
-    .cvWrapper>a{
-        text-decoration: none;
-        color: rgb(255, 255, 255);
-        font-family: Arial, Helvetica, sans-serif;
-    }
-
-    /* skills */
-    .frontend-Skills{
-        display: flex;
-        justify-content: space-around;
-        padding: 5px;
-        flex-direction: row;
-    }
-    .frontend-Skills div{
-        border: 2px solid;
-    }
 
     
 
-
-    
 }
 @media only screen and (min-width : 480px) {
 
