--- a/assets/css/tipography.css
+++ b/assets/css/tipography.css
@@ -52,8 +52,11 @@ nav.navbar{
     color: white;
 
 }
+
+
+
 .call-to-action text{
-    font-size: 1rem;
+    font-size: 1.2rem;
     font-family: Arial, Helvetica, sans-serif;
 
 
@@ -61,11 +64,20 @@ nav.navbar{
 
 .call-to-action button{
     height: 40%;
-    width: 50%;
+    width: 35%;
     background-color: transparent;
     border: 2px solid;
     color: rgb(8, 182, 235);
     border-radius: 5px;
+    
+
+}
+
+.call-to-action button:hover{
+    background-color: white;
+    color: rgb(0, 0, 0);
+    font-weight: bold;
+
 
 }
 
@@ -76,27 +88,67 @@ nav.navbar{
 }
 
 .aboutMe{
-    display: grid;
+    display: flex;
+    flex-direction: column;
     grid-template-columns: 1fr;
     background-color: var(--main-Bg--);
     color: white;
+    font-size: 0.8rem;
+
     
 }
+
+.aboutMe .title{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    background-color: rgb(2, 16, 34);
+}
+
+.ball-wrapper{
+    display: flex;
+    align-self: flex-end;
+    justify-content: flex-end;
+    
+
+}
+
+.ball-wrapper div:nth-child(1){
+    background-color: rgb(255, 179, 0);
+}
+
+.ball-wrapper div:nth-child(2){
+    background-color: rgb(0, 255, 119);
+}
+
+
+.ball-wrapper div:nth-child(3){
+    background-color: rgb(0, 255, 200);
+}
+.ball-wrapper div{
+    width: 1px;
+    background-color: white;
+    margin: 5px;
+    border-radius: 100px;
+
+}
+
+
 
 .downloadBtn{
     /* border: 2px dashed; */
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(2, 8, 19);
     padding: 10px;
+    border-radius: 0px 0px 5px 5px;
 }
 
 .downloadBtn button{
     width: 50%;
     background-color: transparent;
     border: 2px solid rgb(255, 255, 255);
-    font-size: 1.2rem;
+    font-size: 0.9rem;
     border-radius: 5px;
     outline: none;
     color: white;
@@ -123,6 +175,35 @@ nav.navbar{
 
 }
 
+.skills .title{
+    border: 2px solid;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    background-color: rgb(2, 16, 34);
+}
+
+.skills-wrapper{
+    display: flex;
+}
+
+.skills-wrapper article{
+    /* background-color: red; */
+    padding: 10px;
+    margin: 5px;
+    
+}
+
+
+.skills-wrapper {
+    
+}
+
+.skills-wrapper img{
+    width: 80%;
+    object-fit: contain;
+    padding: 0px;
+    margin:0px;
+}
 /* skills end */
 
 /* projects */
