--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -3,10 +3,11 @@
 
 
 
+
 /* layout */
 div.App{
         
-    padding-bottom: 40px;
+    padding-bottom: 80px;
     
 }
 
@@ -14,14 +15,14 @@ div.App{
 /* header wraper */
 section.header-wrapper{
     background-color: var(--main-Bg--);
-    padding-bottom: 15%;
+    padding-bottom: 10%;
     background-image: url('/assets/images/bg.jpg');
     /* background-image: url("https://camo.githubusercontent.com/044d219b987b706f28dabd9346ee8d0ee48d0dc36bb914c85786d40dd151dba4/68747470733a2f2f6d656469612e67697068792e636f6d2f6d656469612f4c3152317476493973766b495777705659722f67697068792e676966"); */
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment:fixed;
-    ;
+    
     
     
     
@@ -52,6 +53,7 @@ nav.navbar{
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 30px;
    
 
     
@@ -116,16 +118,24 @@ section.body-wrapper{
 
 .call-to-action{
     height: 90px;
-    display: flex;
-    align-content: center;
-    align-items: center;
     position: relative;
     bottom: 30px;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+    justify-items: center;
+    justify-content: center;
+    justify-content: space-between;
+
     
 }
 
+
+/* footer */
+
 footer{
-    background-color: rgb(255, 255, 255);
+    background-color: var(--main-Bg--);
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     align-content: center;
@@ -138,4 +148,24 @@ footer{
     width: 100%;
     
     
+
+}
+
+
+footer div{
+
+    display: grid;
+    grid-template-columns: 1fr;
+    align-items: center;
+    justify-content: center;
+    justify-items: center;
+
+
+
+}
+
+footer div span:nth-child(2){
+    color:--main-Bg--;
+    font-size: 0.7rem;
+    font-weight: bold;
 }
