--- a/assets/styles/modules/functions.css
+++ b/assets/styles/modules/functions.css
@@ -1,1 +1,3 @@
-/* No CSS *//*# sourceMappingURL=functions.css.map */
+/* ===========responsive=============*/
+/* ===========responsive=============*/
+/*# sourceMappingURL=functions.css.map */
