--- a/assets/styles/modules/functions.scss
+++ b/assets/styles/modules/functions.scss
@@ -51,3 +51,18 @@
     padding: 15px;
 
 }
+
+
+
+
+/* ===========responsive=============*/
+
+@mixin desktop ($column){
+
+    display: grid;
+    grid-template-columns: $column;
+
+}
+
+
+/* ===========responsive=============*/
