--- a/assets/styles/modules/functions.scss
+++ b/assets/styles/modules/functions.scss
@@ -7,7 +7,7 @@
 
 @mixin flexBox ($direction){
     display: flex;
-    grid-template-columns:row;
+    grid-template-columns:$direction;
 }
 
 @mixin  centerGrid ($column){
@@ -39,10 +39,7 @@
 }
 
 
-@mixin  darkTheme {
-    background-color: $primary-color-dark;
-    color: white;
-}
+
 
 @mixin sectionTitle{
     text-align: center;
@@ -50,6 +47,19 @@
     font-size: 1.5rem;
     padding: 15px;
 
+}
+
+
+// Themes
+
+@mixin  darkTheme {
+    background-color: $primary-color-dark;
+    color: $primary-color-text;
+}
+
+@mixin  lightTheme {
+    background-color: $primary-color-text;
+    color: $primary-color-dark;
 }
 
 
