--- a/assets/styles/modules/typography.scss
+++ b/assets/styles/modules/typography.scss
@@ -7,6 +7,7 @@ h5{
     font-weight: 600;
 }
 
+$font : 'Poppins', sans-serif;
 
 
 p{
@@ -16,6 +17,7 @@ p{
 
 
 
+a,
 span{
     font-family: 'Poppins', sans-serif;
     font-weight: 400;
