fiexed UI bugs and improved scss code reability

--- a/assets/styles/modules/functions.scss
+++ b/assets/styles/modules/functions.scss
@@ -19,8 +19,11 @@
 
 
 @mixin  centerFlex ($direction){
-
-    @include flexBox($direction);
+    display: flex;
+    grid-template-columns:$direction;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
     align-items: center;
     
 
