--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -76,8 +76,8 @@ App {
 navigation {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr 1fr;
-      grid-template-columns: 1fr 1fr;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
   padding: 10px;
   -webkit-box-shadow: 3px 2px 3px -1px rgba(140, 140, 140, 0.5);
           box-shadow: 3px 2px 3px -1px rgba(140, 140, 140, 0.5);
@@ -164,18 +164,23 @@ navigation .menuBtn .nav {
 
 navigation .logo {
   font-size: 1.4rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
   margin: 20px;
   margin-bottom: 0px;
   margin-top: 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-grid-columns: column;
+      grid-template-columns: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  align-items: center;
 }
 
 @media screen and (min-width: 668px) {
