--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -104,7 +104,7 @@ navigation .menuBtn .nav {
   display: none;
 }
 
-@media screen and (min-width: 668px) {
+@media screen and (min-width: 884px) {
   navigation .menuBtn {
     -ms-grid-column: 2;
     grid-column: 2;
@@ -183,7 +183,7 @@ navigation .logo {
   align-items: center;
 }
 
-@media screen and (min-width: 668px) {
+@media screen and (min-width: 884px) {
   navigation .logo {
     -ms-grid-row: 1;
     grid-row: 1;
@@ -201,7 +201,7 @@ navigation .logo {
   margin: 0px !important;
 }
 
-@media screen and (min-width: 668px) {
+@media screen and (min-width: 884px) {
   .profileCard {
     background-color: #536DFE !important;
     -ms-grid-columns: 1fr 1fr;
@@ -241,7 +241,7 @@ navigation .logo {
   padding-top: 60px;
 }
 
-@media screen and (min-width: 668px) {
+@media screen and (min-width: 884px) {
   .profileCard__image {
     grid-area: r;
   }
@@ -259,7 +259,7 @@ navigation .logo {
   padding: 10px;
 }
 
-@media screen and (min-width: 668px) {
+@media screen and (min-width: 884px) {
   .profileCard__desc {
     grid-area: l;
     display: -webkit-box;
@@ -296,7 +296,7 @@ navigation .logo {
   font-size: 1.6rem;
 }
 
-@media screen and (min-width: 668px) {
+@media screen and (min-width: 884px) {
   .profileCard__desc--links span {
     font-size: 2rem !important;
   }
@@ -322,7 +322,7 @@ navigation .logo {
   text-align: center;
 }
 
-@media screen and (min-width: 668px) {
+@media screen and (min-width: 884px) {
   .profileCard__desc--intro p {
     width: 80%;
     font-size: 1.8rem;
@@ -339,7 +339,7 @@ navigation .logo {
       grid-template-columns: 1fr;
 }
 
-@media screen and (min-width: 668px) {
+@media screen and (min-width: 884px) {
   .contentTop {
     display: -ms-grid;
     display: grid;
@@ -348,7 +348,7 @@ navigation .logo {
   }
 }
 
-@media screen and (min-width: 668px) {
+@media screen and (min-width: 884px) {
   .contentTop__child {
     grid-column: 2/-2;
   }
@@ -379,7 +379,7 @@ navigation .logo {
   justify-self: flex-end !important;
 }
 
-@media screen and (min-width: 668px) {
+@media screen and (min-width: 884px) {
   .calltoAction-btn {
     width: 40%;
     padding: 0;
@@ -408,6 +408,10 @@ navigation .logo {
 
 .card__title {
   color: #FFFFFF;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
 }
 
 .card__heroText {
@@ -420,7 +424,7 @@ navigation .logo {
           flex-direction: column;
 }
 
-@media screen and (min-width: 668px) {
+@media screen and (min-width: 884px) {
   .card__heroText {
     display: -ms-grid;
     display: grid;
@@ -437,7 +441,7 @@ navigation .logo {
   }
 }
 
-@media screen and (min-width: 668px) {
+@media screen and (min-width: 884px) {
   .card__skills img {
     width: 50% !important;
   }
@@ -448,7 +452,7 @@ navigation .logo {
 }
 
 /*==========projects==========*/
-@media screen and (min-width: 668px) {
+@media screen and (min-width: 884px) {
   .project {
     display: -ms-grid;
     display: grid;
@@ -515,7 +519,7 @@ navigation .logo {
   grid-gap: 60px;
 }
 
-@media screen and (min-width: 668px) {
+@media screen and (min-width: 884px) {
   .testimony {
     -ms-grid-columns: 1fr 1fr;
         grid-template-columns: 1fr 1fr;
@@ -568,7 +572,7 @@ navigation .logo {
   margin: 10px;
 }
 
-@media screen and (min-width: 668px) {
+@media screen and (min-width: 884px) {
   .testimony__image img {
     width: 10%;
   }
@@ -600,7 +604,7 @@ navigation .logo {
   padding: 25px;
 }
 
-@media screen and (min-width: 668px) {
+@media screen and (min-width: 884px) {
   .contact__title {
     font-size: 1.7rem;
     display: -webkit-box;
@@ -750,7 +754,7 @@ navigation .logo {
           box-shadow: 1px -3px 3px -1px rgba(0, 0, 0, 0.082);
 }
 
-@media screen and (min-width: 668px) {
+@media screen and (min-width: 884px) {
   .fixedmenu {
     display: none;
   }
@@ -790,4 +794,39 @@ navigation .logo {
 }
 
 /*section_title end*/
+/*----balls-------*/
+.balls {
+  width: 90px;
+  justify-self: flex-end;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.balls div {
+  background-color: white;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  margin: 3px;
+}
+
+.balls div:nth-child(1) {
+  background-color: #0ebce7;
+}
+
+.balls div:nth-child(2) {
+  background-color: #00ff73;
+}
+
+.balls div:nth-child(3) {
+  background-color: #00ffbf;
+}
 /*# sourceMappingURL=style.css.map */
